--- a/static/css/parts/ViewletEditorHover.css
+++ b/static/css/parts/ViewletEditorHover.css
@@ -9,10 +9,12 @@
   font-family: var(--EditorFontFamily);
   position: absolute;
   min-height: 200px;
-  min-width: 300px;
+  min-width: 400px;
   contain: strict;
   display: grid;
   place-items: center;
+  top: 100px;
+  user-select: text;
 }
 
 .HoverDisplayString {
