--- a/static/css/parts/ViewletEditorHover.css
+++ b/static/css/parts/ViewletEditorHover.css
@@ -1,32 +1,39 @@
+:root {
+  --HoverWidgetForeground: #9ca2a0;
+  --HoverWidgetBackground: #282e2f;
+}
+
 .EditorHover {
-  background: var(--CompletionListBackground, #282e2f);
-  color: var(--CompletionListForeground, white);
-  user-select: none;
-  font-size: 15px;
-  pointer-events: all;
-  border: 1px solid;
+  background: var(--HoverWidgetBackground, #282e2f);
   border-color: var(--CompletionListBorder, #95a29d);
-  font-family: var(--EditorFontFamily);
-  position: absolute;
+  border: 1px solid;
+  bottom: 0;
+  color: var(--HoverWidgetForeground, white);
+  contain: content;
+  cursor: text;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
   min-height: 20px;
   min-width: 400px;
-  contain: content;
-  display: grid;
+  padding: 4px 8px;
+  position: absolute;
   user-select: text;
-  padding: 3px;
+}
+
+.HoverDisplayString {
+  white-space: pre;
+  contain: content;
   font-family: var(--EditorFontFamily);
   font-size: var(--EditorFontSize);
   letter-spacing: var(--EditorLetterSpacing);
   font-feature-settings: var(--EditorFontFeatureSettings);
   tab-size: var(--EditorTabSize);
   font-display: block;
-  cursor: text;
-  font-weight: 400;
-  position: absolute;
-  bottom: 0;
 }
 
-.HoverDisplayString {
-  white-space: pre;
+.HoverDocumentation {
   contain: content;
+  font-size: 15px;
+  line-height: 1.33333;
 }
