feature: add basic quickpick highlighting

--- a/static/css/parts/ViewletQuickPick.css
+++ b/static/css/parts/ViewletQuickPick.css
@@ -122,3 +122,10 @@
   text-overflow: ellipsis;
   min-width: 0;
 }
+
+/* TODO reuse same highlight css for completions */
+.QuickPickHighlight {
+  color: var(--CompletionHighlightForeground, #e1b974);
+  font-weight: 700;
+  contain: content;
+}
