feature: add keybindings filter highlighting

--- a/static/css/parts/ViewletKeyBindings.css
+++ b/static/css/parts/ViewletKeyBindings.css
@@ -88,3 +88,10 @@
   /* background: red; */
   top: 0;
 }
+
+/* TODO reuse same highlight css for completions and quickpick */
+.SearchHighlight {
+  color: var(--CompletionHighlightForeground, #e1b974);
+  font-weight: 700;
+  contain: content;
+}
