feature: add basic widget for defining keybindings

--- a/static/css/parts/ViewletKeyBindings.css
+++ b/static/css/parts/ViewletKeyBindings.css
@@ -5,6 +5,7 @@
 .KeyBindings {
   color: var(--KeyBindingsEditorColor);
   position: absolute;
+  background: var(--MainBackground);
 }
 
 .KeyBindingsHeader {
