--- a/static/css/parts/ViewletTitleBarMenuBar.css
+++ b/static/css/parts/ViewletTitleBarMenuBar.css
@@ -10,29 +10,26 @@
 }
 
 .TitleBarTopLevelEntry {
-  height: 100%;
   display: flex;
   align-items: center;
   padding: 0 8px;
-  contain: strict;
+  contain: content;
 }
 
 .TitleBarTopLevelEntryLabel {
   height: 22px;
   border-radius: 5px;
-  background: var(--TitleBarTopLevelEntryLabel, inherit);
+  background: var(--TitleBarItemHoverForeground, rgba(90, 93, 94, 0.31));
   pointer-events: none;
   padding: 0 8px;
   display: flex;
   align-items: center;
-  contain: strict;
-  width: 100%;
+  /* contain: content; */
 }
 
 /* TODO use class name instead */
-#TitleBarEntryActive {
+.TitleBarEntryActive {
   padding: 0;
-  --TitleBarTopLevelEntryLabel: var(--TitleBarItemHoverForeground, rgba(90, 93, 94, 0.31));
 }
 
 /* TODO maybe have extra focus outline border */
