--- a/static/css/parts/_Global.css
+++ b/static/css/parts/_Global.css
@@ -17,7 +17,7 @@ body {
   color: var(--WorkbenchForeground);
 }
 
-#Workbench {
+.Workbench {
   width: 100%;
   height: 100%;
   contain: strict;
@@ -25,12 +25,12 @@ body {
   line-height: 1.4;
 }
 
-#TitleBar,
-#SideBar,
-#Main,
-#ActivityBar,
-#Panel,
-#StatusBar {
+.TitleBar,
+.SideBar,
+.Main,
+.ActivityBar,
+.Panel,
+.StatusBar {
   /*
    * not sure why this works, but position fixed combined with backface
    * visibility hidden gives great rendering performance,
@@ -54,28 +54,28 @@ body {
   transform: translateZ(0);
 }
 
-#ActivityBar {
+.ActivityBar {
   background: var(--ActivityBarBackground);
 }
 
-#SideBar {
+.SideBar {
   background: var(--SideBarBackground, rgb(30, 35, 36));
 }
 
-#Main {
+.Main {
   background: var(--MainBackground);
 }
 
-#StatusBar {
+.StatusBar {
   background: var(--StatusBarBackground);
 }
 
-#TitleBar {
+.TitleBar {
   background: rgb(40, 46, 47);
   background: var(--TitleBarBackground);
 }
 
-#Panel {
+.Panel {
   background: var(--PanelBackground);
 }
 
@@ -83,6 +83,7 @@ body {
   display: none !important;
 }
 
+/* TODO remove items from dom instead of hiding them with css */
 [hidden] {
   display: none !important;
 }
