--- a/static/css/parts/ViewletQuickPick.css
+++ b/static/css/parts/ViewletQuickPick.css
@@ -18,7 +18,6 @@
   /* transform: translate3d(0, 0, 0); */
   display: flex;
   flex-direction: column;
-  row-gap: 4px;
   pointer-events: all;
   /* inset: 0; */
   /* will-change: transform; */
@@ -26,14 +25,10 @@
 }
 
 .QuickPickHeader {
-  /* width: 100%; */
   display: flex;
-  /* margin: 6px 6px 0; */
-  padding: 6px 6px 0;
-  /* contain: strict; */
-  height: 30px;
+  padding: 8px 6px 6px;
+  height: 38px;
   contain: strict;
-  /* margin-bottom: -2px; */
 }
 
 .QuickPickItems {
