feature: add functionality to render progress in activity bar

--- a/static/css/parts/ViewletActivityBar.css
+++ b/static/css/parts/ViewletActivityBar.css
@@ -43,6 +43,10 @@
   background: var(--ActivityBarActiveBackground);
 }
 
+.ActivityBarItemNested {
+  background: var(--ActivityBarBackground);
+}
+
 .ActivityBarItem:focus-visible {
   /* background: var(--ActivityBarActiveBackground); */
   color: var(--ActivityBarActiveForeground);
