--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -68,8 +68,8 @@
 
 .SourceControlBadge {
   contain: content;
-  background: var(--BadgeBackground, #90599b);
-  color: var(--BagdeForeground, #eeeeee);
+  background: var(--BadgeSecondaryBackground, #90599b);
+  color: var(--BadgeSecondaryForeground, #eeeeee);
   padding: 3px 6px;
   border-radius: 11px;
   font-size: 11px;
