--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -21,7 +21,6 @@
 
 .EditorLayers {
   contain: strict;
-  /* contain: content; */
   width: 100%;
   height: 100%;
 }
@@ -37,7 +36,7 @@
   display: block;
   height: var(--EditorLineHeight);
   line-height: var(--EditorLineHeight);
-  /* contain: strict; */
+  contain: strict;
 }
 
 .Editors {
@@ -53,7 +52,6 @@
   background: var(--EditorCursorBackground, red);
   pointer-events: none;
   contain: strict;
-  /* border-color: #a8df5a; */
 }
 
 .EditorDiagnostic {
@@ -131,11 +129,6 @@
   inset: 0;
   pointer-events: none;
 }
-
-/* ::highlight(cursor) {
-  background-color: #31e0e0;
-  color: blue;
-} */
 
 .Token.EditorGoToDefinitionLink {
   color: #4e94ce !important;
