--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -11,3 +11,16 @@
   -webkit-mask-position: 50% 50%;
   pointer-events: none;
 }
+
+.ColoredMaskIcon {
+  width: 20px;
+  height: 20px;
+  contain: strict;
+  display: block;
+  background: currentColor;
+  color: var(--TitleBarForeground, rgb(204, 204, 204));
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 16px;
+  -webkit-mask-position: 50% 50%;
+  pointer-events: none;
+}
