fix: missing ellipsis mask icon css

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -74,3 +74,8 @@
   -webkit-mask-image: url(/icons/settings-gear.svg);
   mask-image: url(/icons/settings-gear.svg);
 }
+
+.MaskIconEllipsis {
+  -webkit-mask-image: url(/icons/ellipsis.svg);
+  mask-image: url(/icons/ellipsis.svg);
+}
