--- a/static/css/parts/TreeItem.css
+++ b/static/css/parts/TreeItem.css
@@ -21,6 +21,7 @@
 
 .TreeItem:hover {
   background: var(--TreeItemHoverBackground, rgba(64, 92, 80, 0.2));
+  color: var(--TreeItemHoverForeground, #e0e0e0);
 }
 
 .SourceControlItems {
