--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -4,23 +4,27 @@
 }
 
 .SearchHeader {
-  display: grid;
-  /* padding: 5px 12px 6px 16px; */
-  /* display: flex; */
-  /* flex-wrap: wrap; */
-  grid-template-columns: 20px 1fr;
+}
+
+.SearchHeaderTop {
+  display: flex;
+  contain: content;
+  /* height: 58px; */
+}
+
+.SearchHeaderTopRight {
+  display: flex;
+  flex-direction: column;
+  /* contain: strict; */
+  flex: 1;
 }
 
 .SearchToggleButton {
-  grid-row: 1/2;
   background: transparent;
   border: none;
-}
-
-.SearchToggleButtonExpanded {
-  grid-row: 1/3;
-  width: auto;
-  height: auto;
+  flex: 1;
+  padding: 0;
+  position: relative;
 }
 
 .SearchToggleButton:hover {
@@ -30,8 +34,8 @@
 .ViewletSearchMessage {
   color: rgba(156, 162, 160, 0.65);
   padding-bottom: 8px;
-  grid-column: 2/2;
   padding-top: 5px;
+  padding-left: 22px;
 }
 
 .SearchResults {
@@ -71,7 +75,6 @@
 }
 
 .SearchFieldButton {
-  /* position: absolute; */
   position: relative;
   background: transparent;
   border: none;
