feature: improve search input position to be consistent with extension input position

--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -4,6 +4,7 @@
 }
 
 .SearchHeader {
+  padding-top: 5px;
 }
 
 .SearchHeaderTop {
@@ -25,6 +26,8 @@
   padding: 0;
   position: relative;
   height: auto;
+  width: 16px;
+  margin: 0 2px;
 }
 
 .SearchToggleButton:hover {
