feature: use classname for styling checked button instead of attribute name

--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -93,7 +93,7 @@
   background: rgba(90, 93, 94, 0.31);
 }
 
-.SearchFieldButton[aria-checked='true'] {
+.SearchFieldButtonChecked {
   border: 1px solid #a03f9b;
 }
 
