--- a/static/css/parts/InputBox.css
+++ b/static/css/parts/InputBox.css
@@ -6,7 +6,7 @@
   flex: 1;
   background: var(--InputBoxBackground);
   border: 1px solid rgb(55, 65, 63);
-  padding: 4px;
+  padding: 4px 6px;
   color: var(--InputBoxForeground);
   font-size: 13px;
   height: 24px;
@@ -19,4 +19,37 @@
 .InputBox::-webkit-search-results-button,
 .InputBox::-webkit-search-results-decoration {
   display: none;
+}
+
+.SearchFieldInput {
+  flex: 1;
+  resize: none;
+  color: var(--InputBoxForeground);
+  border: none;
+  font-size: 13px;
+  height: 24px;
+  contain: strict;
+  line-height: 24px;
+  width: 100%;
+  padding: 4px 6px;
+}
+
+.SearchFieldInput {
+  background: transparent;
+}
+
+.MultilineInputBox {
+  width: 100%;
+  margin: 0;
+  border: none;
+  outline: none;
+  flex: 1;
+  background: var(--InputBoxBackground);
+  padding: 4px 6px;
+  color: var(--InputBoxForeground);
+  font-size: 13px;
+  height: 24px;
+  contain: strict;
+  resize: none;
+  overflow: hidden;
 }
