refactor: use display flex for panel instead of grid

--- a/static/css/parts/ViewletPanel.css
+++ b/static/css/parts/ViewletPanel.css
@@ -1,7 +1,7 @@
 .Panel {
-  display: grid;
-  grid-template-rows: 35px 1fr;
   border-top: 1px solid rgba(128, 128, 128, 0.35);
+  display: flex;
+  flex-direction: column;
 }
 
 .Panel {
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0 8px;
+  height: 35px;
 }
 
 .PanelToolBar {
