refactor: use display flex for keybindings editor instead of display grid

--- a/static/css/parts/ViewletKeyBindings.css
+++ b/static/css/parts/ViewletKeyBindings.css
@@ -11,7 +11,7 @@
 .KeyBindingsHeader {
   height: 50px;
   contain: strict;
-  display: grid;
+  display: flex;
   place-items: center;
   padding: 0 15px;
 }
