--- a/static/css/parts/EditorTabs.css
+++ b/static/css/parts/EditorTabs.css
@@ -12,7 +12,7 @@
 }
 
 .MainTab {
-  border-right: 1px solid rgb(34, 34, 34);
+  border-right: 1px solid var(--TabBorder, rgb(34, 34, 34));
   background: var(--TabBackground);
   color: var(--TabForeground);
   /* padding-left: 5px; */
@@ -34,7 +34,7 @@
 }
 
 .MainTabSelected {
-  border-right: 1px solid rgb(34, 34, 34);
+  border-right: 1px solid (--TabBorder, rgb(34, 34, 34));
   background: var(--TabActiveBackground);
   color: var(--TabActiveForeground);
 }
