--- a/static/css/parts/InputBox.css
+++ b/static/css/parts/InputBox.css
@@ -5,7 +5,7 @@
   outline: none;
   flex: 1;
   background: var(--InputBoxBackground);
-  border: 1px solid rgb(55, 65, 63);
+  border: 1px solid var(--InputBoxBorder, rgb(55, 65, 63));
   padding: 4px 6px;
   color: var(--InputBoxForeground);
   font-size: 13px;
@@ -52,4 +52,9 @@
   contain: strict;
   resize: none;
   overflow: hidden;
+}
+
+.InputBox::placeholder,
+.MultilineInputBox::placeholder {
+  color: var(--InputBoxPlaceholderForeground, currentColor);
 }
