--- a/static/css/parts/Markdown.css
+++ b/static/css/parts/Markdown.css
@@ -1,15 +1,10 @@
 /* based on https://github.com/sindresorhus/github-markdown-css/blob/ec90c8c72e77ca5f0a6b048514a11525808d00bd/github-markdown-light.css (License MIT) */
 
-:root {
-  --MarkdownHeadingUnderlineColor: rgba(255, 255, 255, 0.18);
-  --MarkdownColor: #e1e2de;
-}
-
 .Markdown {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: var(--MarkdownColor);
+  color: var(--MarkdownForeground, #e1e2de);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 16px;
   line-height: 1.5;
@@ -61,7 +56,7 @@
   font-weight: 600;
   padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid var(--MarkdownHeadingUnderlineColor);
+  border-bottom: 1px solid var(--MarkdownHeadingUnderlineColor, rgba(255, 255, 255, 0.18));
 }
 
 .Markdown mark {
@@ -219,7 +214,14 @@
 .Markdown kbd {
   display: inline-block;
   padding: 3px 5px;
-  font: 11px ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+  font:
+    11px ui-monospace,
+    SFMono-Regular,
+    SF Mono,
+    Menlo,
+    Consolas,
+    Liberation Mono,
+    monospace;
   line-height: 10px;
   color: #24292f;
   vertical-align: middle;
@@ -307,14 +309,28 @@
 
 .Markdown tt,
 .Markdown code {
-  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+  font-family:
+    ui-monospace,
+    SFMono-Regular,
+    SF Mono,
+    Menlo,
+    Consolas,
+    Liberation Mono,
+    monospace;
   font-size: 12px;
 }
 
 .Markdown pre {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+  font-family:
+    ui-monospace,
+    SFMono-Regular,
+    SF Mono,
+    Menlo,
+    Consolas,
+    Liberation Mono,
+    monospace;
   font-size: 12px;
   word-wrap: normal;
 }
