--- a/static/css/parts/ViewletExtensionDetail.css
+++ b/static/css/parts/ViewletExtensionDetail.css
@@ -7,6 +7,7 @@
   gap: 10px;
   position: absolute;
   background: var(--MainBackground);
+  color: var(--WorkbenchForeground);
 }
 
 .Large.ExtensionDetail {
