--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -52,8 +52,8 @@
 
 .SearchField {
   display: flex;
-  border: 1px solid rgb(55, 65, 63);
-  background: rgb(36, 41, 42);
+  border: 1px solid var(--InputBoxBorder, rgb(55, 65, 63));
+  background: var(--InputBoxBackground, rgb(36, 41, 42));
   contain: content;
 }
 
