feature: align extension list item height with vscode: 62px -> 72px

--- a/static/css/parts/InputBox.css
+++ b/static/css/parts/InputBox.css
@@ -56,5 +56,5 @@
 
 .InputBox::placeholder,
 .MultilineInputBox::placeholder {
-  color: var(--InputBoxPlaceholderForeground, currentColor);
+  color: var(--InputBoxPlaceholderForeground, rgba(255, 255, 255, 0.3));
 }
