--- a/static/css/parts/ViewletTitleBarButtons.css
+++ b/static/css/parts/ViewletTitleBarButtons.css
@@ -20,6 +20,6 @@
 }
 
 .TitleBarButtonClose:hover {
-  background-color: rgba(232, 17, 35, 0.9);
+  background-color: var(--TitleBarButtonCloseHoverBackground, rgba(232, 17, 35, 0.9));
   color: var(--TitleBarButtonCloseHoverForeground, currentColor);
 }
