--- a/static/css/parts/ViewletPanel.css
+++ b/static/css/parts/ViewletPanel.css
@@ -1,5 +1,5 @@
 .Panel {
-  border-top: 1px solid rgba(128, 128, 128, 0.35);
+  border-top: 1px solid var(--PanelBorderTopColor, rgba(128, 128, 128, 0.35));
   display: flex;
   flex-direction: column;
 }
