--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -19,8 +19,11 @@
   display: block;
   background: currentColor;
   color: var(--TitleBarForeground, rgb(204, 204, 204));
+  mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
+  mask-size: 16px;
   -webkit-mask-size: 16px;
+  mask-position: 50% 50%;
   -webkit-mask-position: 50% 50%;
   pointer-events: none;
 }
