--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -178,7 +178,18 @@
   -webkit-mask-image: url(/icons/trash.svg);
   mask-image: url(/icons/trash.svg);
 }
+
 .MaskIconSplitHorizontal {
   -webkit-mask-image: url(/icons/split-horizontal.svg);
   mask-image: url(/icons/split-horizontal.svg);
+}
+
+.MaskIconReplaceAll {
+  -webkit-mask-image: url(/icons/replace-all.svg);
+  mask-image: url(/icons/replace-all.svg);
+}
+
+.MaskIconChevronUp {
+  -webkit-mask-image: url(/icons/chevron-up.svg);
+  mask-image: url(/icons/chevron-up.svg);
 }
