feature: set keybindings table cell css to contain strict

--- a/static/css/parts/ViewletKeyBindings.css
+++ b/static/css/parts/ViewletKeyBindings.css
@@ -78,7 +78,7 @@
 .KeyBindingsTableCell {
   overflow: hidden;
   text-overflow: ellipsis;
-  contain: content;
+  contain: strict;
 }
 
 .Resizer {
