--- a/static/css/parts/ViewletQuickPick.css
+++ b/static/css/parts/ViewletQuickPick.css
@@ -61,9 +61,9 @@
   height: 22px;
   font-size: 13px;
   margin: 0;
-  padding: 0 6px;
+  padding: 0 6px 0 11px;
   contain: strict;
-  gap: 4px;
+  gap: 6px;
   line-height: 22px;
   border-radius: 3px;
 }
