--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -133,6 +133,10 @@
 
 .Diagnostic {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  background: red;
+  background: url(/icons/squiggly-error.svg);
 }
 
 .Token.EditorGoToDefinitionLink {
