Discard changes to static/css/parts/ViewletEditor.css

--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -124,15 +124,10 @@
   contain: content;
 }
 
-.LayerCursor,
-.LayerDiagnostics {
+.LayerCursor {
   position: absolute;
   inset: 0;
   pointer-events: none;
-}
-
-.Diagnostic {
-  position: absolute;
 }
 
 .Token.EditorGoToDefinitionLink {
