--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -124,10 +124,18 @@
   contain: content;
 }
 
-.LayerCursor {
+.LayerCursor,
+.LayerDiagnostics {
   position: absolute;
   inset: 0;
   pointer-events: none;
+}
+
+.Diagnostic {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(/icons/squiggly-error.svg) repeat-x bottom left;
 }
 
 .Token.EditorGoToDefinitionLink {
