--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -136,6 +136,7 @@
   width: 100%;
   height: 100%;
   background: url(/icons/squiggly-error.svg) repeat-x bottom left;
+  contain: strict;
 }
 
 .Token.EditorGoToDefinitionLink {
