--- a/static/css/parts/ViewletProblems.css
+++ b/static/css/parts/ViewletProblems.css
@@ -9,4 +9,21 @@
 }
 
 .Problem {
+  display: flex;
+  contain: strict;
+  height: 20px;
+  width: 100%;
+  gap: 5px;
+  align-items: center;
+}
+
+.ProblemsErrorIcon {
+  width: 17px;
+  height: 17px;
+  contain: strict;
+  color: var(--ProblemsErrorIconForeground, #b64e4e);
+  mask-repeat: no-repeat;
+  mask-size: 100%;
+  mask-position: 50% 50%;
+  background: currentColor;
 }
