feature: render selected problem with highlighted background

--- a/static/css/parts/ViewletProblems.css
+++ b/static/css/parts/ViewletProblems.css
@@ -17,6 +17,11 @@
   align-items: center;
 }
 
+.ProblemSelected {
+  background: var(--ListActiveSelectionBackground);
+  color: var(--ListActiveSelectionForeground);
+}
+
 .ProblemsErrorIcon {
   width: 16px;
   height: 16px;
