--- a/static/css/parts/ViewletProblems.css
+++ b/static/css/parts/ViewletProblems.css
@@ -18,7 +18,7 @@
   padding-left: 20px;
 }
 
-.Problem:hover {
+.Problem:where(:hover) {
   color: var(--ListHoverForeground);
   background: var(--ListHoverBackground);
 }
