feature: add option to render line numbers

--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -17,6 +17,13 @@
   cursor: text;
   font-weight: 400;
   position: absolute;
+  display: flex;
+}
+
+.EditorContent {
+  contain: strict;
+  width: 100%;
+  height: 100%;
 }
 
 .EditorLayers {
@@ -154,4 +161,24 @@
 
 .Link {
   text-decoration: underline;
+}
+
+.Gutter {
+  contain: strict;
+  width: 30px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Gutter:empty {
+  display: none;
+}
+
+.LineNumber {
+  color: var(--EditorLineNumberForeground, rgba(155, 162, 160, 0.3));
+  contain: strict;
+  margin-right: 1px;
+  height: var(--EditorLineHeight);
+  text-align: right;
 }
