--- a/static/css/parts/ViewletFindWidget.css
+++ b/static/css/parts/ViewletFindWidget.css
@@ -12,6 +12,8 @@
 .FindWidgetDetails {
   display: flex;
   contain: content;
+  align-items: center;
+  height: 100%;
 }
 
 .FindWidgetMatchCount {
