feature: add circle filled icon

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -177,3 +177,7 @@
 .MaskIconError {
   mask-image: url(/icons/error.svg);
 }
+
+.MaskIconCircleFilled {
+  mask-image: url(/icons/circle-filled.svg);
+}
