--- a/static/css/parts/EditorTabs.css
+++ b/static/css/parts/EditorTabs.css
@@ -56,29 +56,7 @@
   display: flex;
   margin-left: 4px;
   flex-shrink: 0;
-}
-
-.EditorTabCloseButton::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background: var(--TabActiveForeground);
-  mask-image: url(/icons/icon-close.svg);
-  mask-repeat: no-repeat;
-  mask-position: center;
-  mask-size: 50%;
-}
-
-.Circle {
-  position: relative;
-  width: 23px;
-  height: 23px;
-  contain: strict;
-  flex-shrink: 0;
-}
-
-.TabDirtyIcon {
-  mask-image: url(/icons/circle-filled.svg);
+  color: var(--TabForeground);
 }
 
 .EditorTabCloseButton:hover {
