fix: explorer new folder icon

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -111,7 +111,7 @@
 }
 
 .MaskIconNewFolder {
-  mask-image: url(/icons/new-file.svg);
+  mask-image: url(/icons/new-folder.svg);
 }
 
 .MaskIconListFlat {
