feature: toggle tabs close button visibility with css instead of javascript pointer events

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -76,7 +76,8 @@
   mask-image: url(/icons/arrow-up.svg);
 }
 
-.MaskIconClose {
+.MaskIconClose,
+.EditorTabCloseButton:hover .MaskIconCircleFilled {
   mask-image: url(/icons/close.svg);
 }
 
