feature: display badge of problem count next to file name in problems view

--- a/static/css/parts/ViewletProblems.css
+++ b/static/css/parts/ViewletProblems.css
@@ -18,6 +18,10 @@
   padding-left: 20px;
 }
 
+.ProblemBadge {
+  margin-left: 5px;
+}
+
 .Problem:where(:hover) {
   color: var(--ListHoverForeground);
   background: var(--ListHoverBackground);
