--- a/static/css/parts/Badge.css
+++ b/static/css/parts/Badge.css
@@ -1,16 +1,4 @@
 .Badge {
-  contain: strict;
-  font-size: 11px;
-  font-weight: 400;
-  min-height: 18px;
-  min-width: 18px;
-  line-height: 1;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.BadgeContent {
   contain: content;
   background: var(--BadgeBackground, rgb(160, 63, 155));
   color: var(--BadgeForeground, #eeeeee);
@@ -19,8 +7,7 @@
   font-weight: 400;
   height: 18px;
   width: 18px;
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  --MaskIconSize: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
