feature: add contain strict to diff editor content to improve performance

--- a/static/css/parts/ViewletDiffEditor.css
+++ b/static/css/parts/ViewletDiffEditor.css
@@ -4,8 +4,8 @@
   position: absolute;
 }
 
-.DiffEditorContentLeft,
-.DiffEditorContentRight {
+.DiffEditorContent {
+  contain: strict;
   flex: 1;
 }
 
