--- a/static/css/parts/ViewletDiffEditor.css
+++ b/static/css/parts/ViewletDiffEditor.css
@@ -1,3 +1,8 @@
+:root {
+  --InsertionBackground: rgba(155, 185, 85, 0.4);
+  --DeletionBackground: rgba(255, 0, 0, 0.4);
+}
+
 .DiffEditor {
   display: flex;
   color: rgb(188, 190, 190);
@@ -7,12 +12,14 @@
 .DiffEditorContent {
   contain: strict;
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .Deletion {
-  background: rgba(255, 0, 0, 0.4);
+  background: var(--DeletionBackground);
 }
 
 .Insertion {
-  background: rgba(155, 185, 85, 0.4);
+  background: var(--InsertionBackground);
 }
