--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -16,6 +16,7 @@
 
 .SourceControlHeader {
   padding: 5px 12px 6px 20px;
+  contain: content;
 }
 
 .ViewSourceControlInput[aria-busy] {
@@ -32,6 +33,7 @@
 
 .SourceControlItems {
   flex: 1;
+  contain: strict;
 }
 
 .SourceControlButton {
