--- a/static/css/parts/ViewletVideo.css
+++ b/static/css/parts/ViewletVideo.css
@@ -1,13 +1,23 @@
 .Video {
-  display: grid;
+  display: flex;
   place-items: center;
 }
 
 .VideoErrorMessage {
   color: white;
+  contain: content;
 }
 
-.VideoVideo {
+.VideoContent {
+  contain: content;
+  display: flex;
+  place-items: center;
+  flex: 1;
+}
+
+.VideoElement {
   max-width: 100%;
   max-height: 100%;
+  contain: content;
+  margin: 0 auto;
 }
