--- a/static/css/parts/ViewletAudio.css
+++ b/static/css/parts/ViewletAudio.css
@@ -5,4 +5,19 @@
 
 .AudioErrorMessage {
   color: white;
+  contain: content;
+}
+
+.AudioContent {
+  contain: content;
+  display: flex;
+  place-items: center;
+  flex: 1;
+}
+
+.AudioElement {
+  max-width: 100%;
+  max-height: 100%;
+  contain: content;
+  margin: 0 auto;
 }
