--- a/static/css/parts/ViewletMedia.css
+++ b/static/css/parts/ViewletMedia.css
@@ -1,21 +1,21 @@
-.Video {
+.Media {
   display: flex;
   place-items: center;
 }
 
-.VideoErrorMessage {
+.MediaErrorMessage {
   color: white;
   contain: content;
 }
 
-.VideoContent {
+.MediaContent {
   contain: content;
   display: flex;
   place-items: center;
   flex: 1;
 }
 
-.VideoElement {
+.MediaElement {
   max-width: 100%;
   max-height: 100%;
   contain: content;
