feature: set problem to cursor pointer to align with vscode (#4618)

--- a/static/css/parts/ViewletProblems.css
+++ b/static/css/parts/ViewletProblems.css
@@ -11,11 +11,12 @@
 .Problem {
   display: flex;
   contain: strict;
-  height: 20px;
+  height: 22px;
   width: 100%;
   gap: 5px;
   align-items: center;
   padding-left: 20px;
+  cursor: pointer;
 }
 
 .ProblemBadge {
